# modwaklog

./: .gitignore  AUTHORS  COPYING  COPYRIGHT  INSTALL  Makefile  Makefile.am  NEWS  NOTES  README  VERSION  configure.ac  configure.in  lifetime.c  mod_afs.c  mod_waklog.c  mod_waklog.spec  regen.sh  version.c  waklog.conf
debian/: 500mod_waklog.info  changelog  control  copyright  rules  waklog.load
